<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/smssdk_transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/line"
            android:textColor="@color/smssdk_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dele_song_details_author"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/author"
            android:textColor="@color/smssdk_white"
            android:textSize="15sp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/line"
            android:textColor="@color/smssdk_white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/hq"
            android:textColor="@color/smssdk_white" />

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/音效"
            android:textColor="@color/smssdk_white" />

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/mv"
            android:textColor="@color/smssdk_white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <com.admin.core.ui.view.player.MusicPhoto
            android:id="@+id/dele_song_page_photo_iamge"
            android:layout_width="250dp"
            android:layout_marginTop="15dp"
            android:layout_height="250dp"
            android:src="@mipmap/launcher_00"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>