<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:orientation="horizontal"
    android:layout_marginStart="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_search_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/item_search_song"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="8"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_search_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:maxLines="1"
            android:textColor="@color/smssdk_black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">
            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sq"
                android:textColor="#E5B047"
                android:textSize="20sp" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/独家"
                android:textColor="@color/app_music_green"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_song_search_author"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:gravity="center_vertical"
                android:textColor="@color/smssdk_black"
                android:textSize="12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/item_song_search_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/视频"
        android:textSize="25sp" />

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/item_song_search_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/更多"
        android:textSize="20sp" />

</androidx.appcompat.widget.LinearLayoutCompat>