<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_icon_layout"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="30dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/home_icon_love"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:gravity="center"
            android:text="@string/喜欢"
            android:textColor="@color/app_music_green"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_love_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_love_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/home_icon_recently"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/最近"
            android:textColor="@color/app_music_green"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_recently_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_recently_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/home_icon_native"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView

            android:layout_width="35dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/本地"
            android:textColor="@color/app_music_green"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_native_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_native_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/home_icon_bought"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/已购"
            android:textColor="@color/app_music_green"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_bought_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_bought_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/home_icon_Attention"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/关注"
            android:textColor="@color/app_music_green"
            android:textSize="35sp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_Attention_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_Attention_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>