<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/smssdk_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_dialog_song_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:textColor="@color/app_music_green"
        tools:text="名字"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/home_dialog_song_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="路径"
        android:textColor="@color/smssdk_black"
        android:textSize="15sp" />

    <HorizontalScrollView
        android:id="@+id/home_dialog_song_scrollview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_next_play"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="35dp"
                    android:gravity="center"
                    android:textColor="@color/smssdk_black"
                    android:text="@string/dialog_play_below"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="下一首播放"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--<androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_add_songlist"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="{home-add}"
                    android:textColor="@color/smssdk_black"
                    android:textSize="40dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="加到歌单"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>-->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_download"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/home_dialog_song_download_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/dialog_dowload"
                    android:textColor="@color/smssdk_black"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="下载"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_shard"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/paly_share"
                    android:textColor="@color/smssdk_black"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="分享"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_delete"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/home_delete"
                    android:textColor="@color/smssdk_black"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="删除"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/home_dialog_song_scrollview2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_singer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/more_singer"
                    android:textColor="@color/smssdk_black"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="查看歌手"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_album"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/dialog_album"
                    android:textColor="@color/smssdk_black"
                    android:textSize="40sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="查看专辑"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_play_video"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/music_video"
                    android:textColor="@color/smssdk_black"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="播放视频"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/home_dialog_song_message"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">
                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/dialog_songmessage"
                    android:textColor="@color/smssdk_black"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="歌曲信息"
                    android:textColor="@color/smssdk_black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/app_recy" />

    <TextView
        android:id="@+id/home_dialog_song_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="取消"
        android:textColor="@color/smssdk_black"
        android:textSize="15sp" />
</androidx.appcompat.widget.LinearLayoutCompat>